--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>App</title>
+        <script src="simple.js"></script>
+        
     </head>
     <body>
         <p>New text</p>
